Cambio de colores, adición de imagen de google en tab-nav, cambio de fuentes

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <title>BzgPokeAppTwo</title>
   <base href="/">
-
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root>
-    <img src="https://resourcesbizagi.azureedge.net/images/Bizagi_logo.svg" width="600" />
+      <img class="loading-image" src="https://i.gifer.com/9xnj.gif" width="600" />
   </app-root>
 </body>
 </html>
